--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,16 @@ logging:
       forte:
         simbot: debug
 
-simbot:
-  core:
-    bots: # 你的bot的 账号:密码
+#simbot:
+#  core:
+#    bots: 2177425801:13145210.00.0
+    # 你的bot的 账号:密码
 
+spring:
+  datasource:
+    username: root
+    password: 123456
+    #url: jdbc:mysql//IP:端口号/数据库名称
+    #时区错误问题serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/mybatis?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8
+    driver-class-name: com.mysql.jdbc.Driver
