--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -42,11 +42,12 @@ jobs:
             ${{ runner.os }}-maven-
       - name: package
         run: mvn package
+      
       - name: scp
         uses: garygrossgarten/github-action-scp@release
         with:
-          local: config/target/config-1.0-SNAPSHOT.jar
-          remote: /dataflow/config-1.0-SNAPSHOT.jar
+          local: simbot-mirai-springboot-starter-demo/target/simbot-mirai-springboot-starter-demo-1.0-SNAPSHOT.jar
+          remote: /dataflow/simbot-mirai-springboot-starter-demo-1.0-SNAPSHOT.jar
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER_NAME }}
           password: ${{ secrets.PASSWORD }}
@@ -60,4 +61,4 @@ jobs:
           port: 22
           script: |
             cd /dataflow
-            nohup java -jar config-1.0-SNAPSHOT.jar &
+            nohup java -jar simbot-mirai-springboot-starter-demo-1.0-SNAPSHOT.jar &
