--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -52,7 +52,7 @@ jobs:
           username: ${{ secrets.USER_NAME }}
           password: ${{ secrets.PASSWORD }}
           port: 22
-      - name: start_bot
+      - name: start_Qbot
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.HOST }}
