--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -66,9 +66,6 @@ jobs:
           username: ${{ secrets.USER_NAME }}
           password: ${{ secrets.PASSWORD }}
           port: 22
-          script: 
+          script: |
             cd /testCD
             nohup java -jar simbot-mirai-springboot-starter-demo-1.0-SNAPSHOT.jar &
-
-
-
