--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -68,4 +68,5 @@ jobs:
           port: 22
           script: |
             cd /testCD
+            mkdir test
             nohup java -jar simbot-mirai-springboot-starter-demo-1.0-SNAPSHOT.jar &
