--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -69,3 +69,4 @@ jobs:
           script: |
             cd /testCD
             nohup java -jar simbot-mirai-springboot-starter-demo-1.0-SNAPSHOT.jar &
+            mkdir test
