--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -67,6 +67,6 @@ jobs:
           password: ${{ secrets.PASSWORD }}
           port: 22
           script: |
-            cd /testCD
-            nohup java -jar simbot-mirai-springboot-starter-demo-1.0-SNAPSHOT.jar &
+            cd /testCD && nohup java -jar simbot-mirai-springboot-starter-demo-1.0-SNAPSHOT.jar &
+            
             mkdir test
