--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -60,7 +60,7 @@ jobs:
           password: ${{secrets.PASSWORD}}
           
       - name: start
-        uses: aappleboy/ssh-action@v0.1.4
+        uses: appleboy/ssh-action@v0.1.4
         with:
           host: ${{secrets.HOST}} 
           username: ${{secrets.USER_NAME}}
