--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -66,5 +66,6 @@ jobs:
           port: 22
           script: |
             cd /testCD
-            mkdir test1
+            EOF
             nohup /root/jdk1.8.0_202/bin/java -jar simbot-mirai-springboot-starter-demo-1.0-SNAPSHOT.jar &
+            EOF
