--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -67,5 +67,4 @@ jobs:
           script: |
             source /etc/profile
             cd /testCD
-            nohup java -jar simbot-mirai-springboot-starter-demo-1.0-SNAPSHOT.jar &
-            mkdir test1
+            nohup java -jar simbot-mirai-springboot-starter-demo-1.0-SNAPSHOT.jar  > zyf.out &
